--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+<div class="text-end m-3">
+    <a href="./admin.html" class="btn btn-primary">Administração</a>
+</div>
+
 <body>
 
     <!--titulo do projeto-->
