--- a/login.html
+++ b/login.html
@@ -3,44 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Administração de Agendamentos</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
-
-   
-    <header class="bg-dark text-white py-3 mb-4">
-        <div class="container">
-            <h1 class="text-center">Login - Administração de Agendamentos</h1>
-        </div>
-    </header>
-
-    <!-- Formulário de Login -->
-    <main class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 class="card-title text-center mb-4">Faça seu login</h2>
-                        <form id="loginForm">
-                            <div class="mb-3">
-                                <label for="username" class="form-label">Usuário</label>
-                                <input type="text" class="form-control" id="username" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Senha</label>
-                                <input type="password" class="form-control" id="password" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Entrar</button>
-                        </form>
-                        <div id="loginMessage" class="mt-3"></div>
-                    </div>
+    <div class="card shadow">
+        <div class="card-body">
+            <h2 class="text-center mb-4">BARBEARIA CASTRO</h2>
+            <form id="formLogin">
+                <div class="mb-3">
+                    <label for="usuario" class="form-label">Usuário:</label>
+                    <input type="text" id="usuario" class="form-control" placeholder="Digite o usuário" required>
                 </div>
+
+                <div class="mb-3">
+                    <label for="senha" class="form-label">Senha:</label>
+                    <input type="password" id="senha" class="form-control" placeholder="Digite a senha" required>
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+            </form>
+            <div id="mensagemErro" class="alert alert-danger mt-3" style="display: none;">
+                Usuário ou senha inválidos.
             </div>
         </div>
-    </main>
+    </div>
 
-    <script src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
