--- a/admin.html
+++ b/admin.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administração de Agendamentos</title>
+    <title>Painel de Administração</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/admin.css"> <!-- Link para o CSS -->
 </head>
-<body>
 
-    <!-- Cabeçalho da Página -->
-    <header class="bg-dark text-white py-3 mb-4">
-        <div class="container">
-            <h1 class="text-center">Administração de Agendamentos</h1>
-        </div>
+<body>
+    <header>
+        <h1>Painel de Administração - Barbearia Castro</h1>
     </header>
 
-    <!-- Conteúdo Principal -->
-    <main class="container">
-        <!-- Tabela para exibir os agendamentos -->
-        <h2 class="mb-4">Lista de Agendamentos</h2>
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>Nome</th>
-                    <th>Telefone</th>
-                    <th>Serviço</th>
-                    <th>Data</th>
-                    <th>Hora</th>
-                    <th>Pagamento</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody id="listaAgendamentos">
-                <!-- Agendamentos serão carregados aqui -->
-            </tbody>
-        </table>
-    </main>
+    <section class="container">
+        <h2>Agendamentos Confirmados</h2>
+        <div class="table-responsive"> <!-- Adiciona responsividade à tabela -->
+            <table class="table table-bordered table-striped" id="listaAgendamentos">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Nome</th>
+                        <th>Telefone</th>
+                        <th>Serviço</th>
+                        <th>Data</th>
+                        <th>Hora</th>
+                        <th>Pagamento</th>
+                        <th>Ações</th> <!-- Coluna para ações -->
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Os agendamentos serão carregados aqui dinamicamente -->
+                </tbody>
+            </table>
+        </div>
 
-    <script src="../js/admin.js"></script>
+        <button class="btn btn-success mt-4" id="gerarRelatorio">Gerar Relatório Diário de Lucro</button>
+        <div id="relatorioLucro" class="mt-3" style="display: none;">
+            <h3>Relatório Diário de Lucro</h3>
+            <p id="lucroTotal"></p>
+        </div>
+    </section>
+
+    <script src="./js/admin.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
